--- a/src/app/add-product/add-product.page.html
+++ b/src/app/add-product/add-product.page.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-toolbar class="ios hydrated">
-    <ion-title class="ios title-ios hydrated">Booking</ion-title>
+    <ion-title class="ios title-ios hydrated">Estoque</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
   <ion-list lines="full">
-    <form>
+    <form [formGroup]="createProduct" (submit)="createProduct()">
       <ion-item>
         <ion-label position="floating">Nome</ion-label>
         <ion-input formControlName="name" type="text" required></ion-input>
@@ -17,7 +17,7 @@
       </ion-item>
       <ion-item>
         <ion-label position="floating">Preço</ion-label>
-        <ion-input formControlName="price" type="text" required>
+        <ion-input formControlName="price" type="number" required>
         </ion-input>
       </ion-item>
       <ion-row>
